New approach to building the tree, and start of actual validation.